tests/NormalTests/paczka1/fuzzy1/60899134.err
Error in line 12: dp1lpiUKKz A547 31,9
Error in line 17: 5nxbAZM6 A383 63,9
Error in line 18: h1Tve8gy S176 19,5
Error in line 28: dkx5W3 A383 39,9
Error in line 37: VGnhMR2JS A547 -3,3
Error in line 34: dp1lpiUKKz S853 38,6
Error in line 39: dp1lpiUKKz S176 46,9
